# backend/docs/swagger.yaml
@@ -69,6 +69,8 @@ definitions:
         type: integer
       is_published:
         type: boolean
+      photo_count:
+        type: integer
       title:
         type: string
     type: object
@@ -183,6 +185,8 @@ definitions:
         - instagram
         - facebook
         - email
+        - tiktok
+        - whatsapp
         type: string
       url:
         type: string
@@ -290,6 +294,8 @@ definitions:
         type: string
       id:
         type: integer
+      photo_count:
+        type: integer
       title:
         type: string
     type: object
@@ -351,6 +357,8 @@ definitions:
         - instagram
         - facebook
         - email
+        - tiktok
+        - whatsapp
         type: string
       url:
         type: string
